# Wall-Blazer

./: README.md  build_windows.py  install.sh  install_windows.bat  meson.build  optimize_lightdm.sh
data/: com.wallblazer.WallBlazer.appdata.xml.in  com.wallblazer.WallBlazer.desktop.in  com.wallblazer.WallBlazer.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: __main__.py  commons.py  menu.py  meson.build  server.py  utils.py  wallblazer.gresource.xml  wallblazer.in
src/assets/: control.ui
src/gui/: control.py  gui_utils.py
src/player/: base_player.py  video_player.py  web_player.py
